fix overlay at wrong position

--- a/matraum-app/src/app/pages/scan-page/scan-page.component.sass
+++ b/matraum-app/src/app/pages/scan-page/scan-page.component.sass
@@ -4,9 +4,12 @@
 
 #canvasTransp
   margin-top: 16px
-  
+
 #canvas
   display: none
 
-#frame
-  position: relative
+.frame
+  padding-top: 50px
+
+.log
+  margin-top: -30px
